Some change od texts and added treatment types link to home

--- a/_source/LigaCancer/Views/AttendanceType/Index.cshtml
+++ b/_source/LigaCancer/Views/AttendanceType/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model RVCC.Models.SearchModel.AttendanceTypeSearchModel
 @{
-    ViewData["Title"] = "Atendimentos";
+    ViewData["Title"] = "Tipos de Atendimento";
 }
 
 @section styles {
@@ -18,7 +18,7 @@
             <a asp-controller="Home" asp-action="Index">Home</a>
         </li>
         <li class="breadcrumb-item">
-            Cânceres
+            Tipos de Atendimento
         </li>
     </ol>
     <div class="container-fluid">
@@ -57,7 +57,7 @@
 
                         <div class="card">
                             <div class="card-header">
-                                <span class="fa fa-notes-medical"></span> Atendimentos
+                                <span class="fa fa-notes-medical"></span> Tipos de Atendimento
                             </div>
                             <div class="card-body">
                                 <div class="form-inline float-right">
@@ -66,7 +66,7 @@
                                     </a>
                                 </div>
 
-                                <table class="table table-bordered table-striped text-center" id="attendanceTypeTable" aria-describedby="Tabela de tipos de atendimentos"></table>
+                                <table class="table table-bordered table-striped text-center" id="attendanceTypeTable" aria-describedby="Tabela de tipos de atendimento"></table>
                             </div>
                         </div>
                     </div>
