--- a/_source/LigaCancer/Views/ExpenseType/Index.cshtml
+++ b/_source/LigaCancer/Views/ExpenseType/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model RVCC.Models.SearchModel.ExpenseTypeSearchModel
 @{
-    ViewData["Title"] = "Tipos de despesas";
+    ViewData["Title"] = "Tipos de despesa";
 }
 
 @section styles {
@@ -18,7 +18,7 @@
             <a asp-controller="Home" asp-action="Index">Home</a>
         </li>
         <li class="breadcrumb-item">
-            Tipos de despesas
+            Tipos de despesa
         </li>
     </ol>
     <div class="container-fluid">
@@ -57,7 +57,7 @@
 
                         <div class="card">
                             <div class="card-header">
-                                <span class="fa fa-money-bill"></span> Tipos de Despesas
+                                <span class="fa fa-money-bill"></span> Tipos de Despesa
                             </div>
                             <div class="card-body">
                                 <div class="form-inline float-right">
@@ -66,7 +66,7 @@
                                     </a>
                                 </div>
 
-                                <table class="table table-bordered table-striped text-center" id="expenseTypeTable" aria-describedby="Tabela de tipos de despesas"></table>
+                                <table class="table table-bordered table-striped text-center" id="expenseTypeTable" aria-describedby="Tabela de tipos de despesa"></table>
                             </div>
                         </div>
                     </div>
