--- a/_source/LigaCancer/Views/ServiceType/Index.cshtml
+++ b/_source/LigaCancer/Views/ServiceType/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model RVCC.Models.SearchModel.ServiceTypeSearchModel
 @{
-    ViewData["Title"] = "Serviços";
+    ViewData["Title"] = "Tipos de Serviço";
 }
 
 @section styles {
@@ -18,7 +18,7 @@
             <a asp-controller="Home" asp-action="Index">Home</a>
         </li>
         <li class="breadcrumb-item">
-            Serviços
+            Tipos de Serviço
         </li>
     </ol>
     <div class="container-fluid">
@@ -57,7 +57,7 @@
 
                         <div class="card">
                             <div class="card-header">
-                                <span class="fa fa-id-card-clip"></span> Serviços
+                                <span class="fa fa-id-card-clip"></span> Tipo de Serviços
                             </div>
                             <div class="card-body">
                                 <div class="form-inline float-right">
@@ -66,7 +66,7 @@
                                     </a>
                                 </div>
 
-                                <table class="table table-bordered table-striped text-center" id="serviceTypeTable" aria-describedby="Tabela de tipos de serviços"></table>
+                                <table class="table table-bordered table-striped text-center" id="serviceTypeTable" aria-describedby="Tabela de tipos de serviço"></table>
                             </div>
                         </div>
                     </div>
