--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -88,7 +88,7 @@
 
                     <li class="nav-item">
                         <a asp-action="Index" asp-controller="Benefit" class="nav-link">
-                            <span class="nav-icon fa fa-clipboard"></span> Tipos de Benefícios
+                            <span class="nav-icon fa fa-clipboard"></span> Tipos de Benefício
                         </a>
                     </li>
 
@@ -125,25 +125,25 @@
                     <li class="nav-title">Configurações</li>
                     <li class="nav-item">
                         <a asp-action="Index" asp-controller="ExpenseType" class="nav-link">
-                            <span class="nav-icon fa fa-money-bill"></span> Tipos de Despesas
+                            <span class="nav-icon fa fa-money-bill"></span> Tipos de Despesa
                         </a>
                     </li>
 
                     <li class="nav-item">
                         <a asp-action="Index" asp-controller="TreatmentType" class="nav-link">
-                            <span class="nav-icon fa fa-x-ray"></span> Tipos de Tratamentos
+                            <span class="nav-icon fa fa-x-ray"></span> Tipos de Tratamento
                         </a>
                     </li>
 
                     <li class="nav-item">
                         <a asp-action="Index" asp-controller="AuxiliarAccessoryType" class="nav-link">
-                            <span class="nav-icon fa fa-universal-access"></span> Tipos de Acessorios Auxiliares
+                            <span class="nav-icon fa fa-universal-access"></span> Tipos de Acessórios Auxiliares
                         </a>
                     </li>
 
                     <li class="nav-item">
                         <a asp-action="Index" asp-controller="ServiceType" class="nav-link">
-                            <span class="nav-icon fa fa-id-card-clip"></span> Tipos de Serviços
+                            <span class="nav-icon fa fa-id-card-clip"></span> Tipos de Serviço
                         </a>
                     </li>
 
