--- a/_source/LigaCancer/Views/TreatmentType/Index.cshtml
+++ b/_source/LigaCancer/Views/TreatmentType/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model RVCC.Models.SearchModel.TreatmentTypeSearchModel
 @{
-    ViewData["Title"] = "Tipos de tratamentos";
+    ViewData["Title"] = "Tipos de tratamento";
 }
 
 @section styles {
@@ -18,7 +18,7 @@
             <a asp-controller="Home" asp-action="Index">Home</a>
         </li>
         <li class="breadcrumb-item">
-            Tipos de tratamentos
+            Tipos de tratamento
         </li>
     </ol>
     <div class="container-fluid">
@@ -63,7 +63,7 @@
 
                         <div class="card">
                             <div class="card-header">
-                                <span class="fa fa-x-ray"></span> Tipos de Tratamentos
+                                <span class="fa fa-x-ray"></span> Tipos de Tratamento
                             </div>
                             <div class="card-body">
                                 <div class="form-inline float-right">
@@ -72,7 +72,7 @@
                                     </a>
                                 </div>
 
-                                <table class="table table-bordered table-striped text-center" id="treatmentTypeTable" aria-describedby="Tabela de tipos de tratamentos"></table>
+                                <table class="table table-bordered table-striped text-center" id="treatmentTypeTable" aria-describedby="Tabela de tipos de tratamento"></table>
                             </div>
                         </div>
                     </div>
