--- a/_source/LigaCancer/Views/PatientExpenseType/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/PatientExpenseType/Partials/_Index.cshtml
@@ -12,6 +12,31 @@
     </div>
 
     <div class="card-body collapse" id="patientExpenseTypeCollapse">
+        <div class="row">
+            <div class="col">
+                <strong>Gastos Mensais:</strong>
+                <span id="monthlyExpense"></span>
+            </div>
+            <div class="col">
+                <strong>Gastos Anuais:</strong>
+                <span id="annuallyExpense"></span>
+            </div>
+            <div class="col">
+                <strong>Gastos Mensais Estimados:</strong>
+                <span id="monthlyExpenseEstimated"></span>
+            </div>
+            <div class="col">
+                <strong>Gastos Anuais Estimados:</strong>
+                <span id="annuallyExpenseEstimated"></span>
+            </div>
+            <div class="col">
+                <strong>Total Anual (Valores totais somados):</strong>
+                <span id="totalExpense"></span>
+            </div>
+        </div>
+
+        <hr />
+
         <div class="form-inline float-right">
             <a id="addPatientExpenseTypeButton" asp-action="AddPatientExpenseType" asp-controller="PatientExpenseType" asp-route-id="@Model.PatientId" data-title="Adicionar Despesa" class="btn btn-primary"
                data-toggle="modal" data-target="#modal-action">
